# create_woragis_api

./: MANIFEST.in  main.py  pyproject.toml  requirements.txt  setup.py
templates/data-science/: Dockerfile  docker-compose.yml  main.py  requirements.txt
templates/rest/: .dockerignore  Dockerfile  docker-compose.yml  main.py  requirements.txt
templates/rest/ai/: models.py
templates/rest/app/ai/: tools.py
templates/rest/app/controllers/: user.py
templates/rest/app/dependencies/: auth.py
templates/rest/app/models/: user.py
templates/rest/app/routes/: index.py
templates/rest/app/services/kafka/: producer.py
templates/rest/app/utils/: email.py  jwt.py  rate_limiter.py  redis_client.py
templates/rest/base/: docker-compose.yml  requirements.txt
templates/rest/base/ai/: agents.py  tools.py
templates/rest/base/app/: main.py
templates/rest/base/app/ai/: agents.py  models.py
templates/rest/base/app/controllers/: password_reset.py  user.py
templates/rest/base/app/core/: config.py
templates/rest/base/controllers/: password_reset.py
templates/rest/base/dependencies/: auth.py
templates/rest/base/models/: user.py
templates/rest/base/routes/: index.py  user.py
templates/rest/base/schemas/: index.py
templates/rest/base/utils/: rate_limiter.py
templates/rest/config/: index.py
templates/rest/controllers/: user.py
templates/rest/data/: database.py
templates/rest/routes/: index.py  password_reset.py  user.py
templates/rest/schemas/: user.py
templates/rest/utils/: email.py  jwt.py  rate_limiter.py  redis_client.py
(+9 files in other folders)
