[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "create-woragis-api"
version = "0.1"
description = "Create FastAPI backends with templates: REST, gRPC, AI"
authors = [
    { name="Woragis", email="masteringthecode.woragis@gmail.com" }
]
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.8"

dependencies = [
    "click"
]

[project.optional-dependencies]
rest = ["fastapi", "uvicorn"]
grpc = ["grpcio", "protobuf"]
ai-rest = ["fastapi", "uvicorn", "openai"]
ai-grpc = ["grpcio", "protobuf", "openai"]
mixed = ["fastapi", "uvicorn", "grpcio", "protobuf"]
ai-mixed = ["fastapi", "uvicorn", "grpcio", "protobuf", "openai"]

[project.scripts]
create-woragis-api = "create_woragis_api.main:cli"
